Add support for testing consumer connectors; add negative provider tests